crates/toml/tests/snapshots/invalid/integer/leading-zero-sign-03.stderr
TOML parse error at line 1, column 25
  |
1 | leading-zero-sign-03 = +0_1
  |                         ^
unexpected leading zero, expected nothing
